# app/docs/swagger.json
@@ -5,17 +5,26 @@
         "title": "My API",
         "termsOfService": "http://localhost:8080/swagger/index.html",
         "contact": {},
-        "version": "1.0"
+        "version": "1.1"
     },
+    "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
         "/address/geocode": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "geocode"
                 ],
                 "summary": "Geocode an address",
                 "operationId": "geocodeAddress",
@@ -38,21 +47,29 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid request format"
+                        "description": "Bad Request"
                     },
                     "500": {
-                        "description": "Dadata API error"
+                        "description": "Internal Server Error"
                     }
                 }
             }
         },
         "/address/search": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "search"
                 ],
                 "summary": "Search for an address",
                 "operationId": "searchAddress",
@@ -75,10 +92,78 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid request format"
+                        "description": "Bad Request"
                     },
                     "500": {
-                        "description": "Dadata API error"
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SingIn"
+                ],
+                "summary": "Log in a user",
+                "operationId": "loginUser",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JWT token"
+                    },
+                    "401": {
+                        "description": "Invalid credentials"
+                    }
+                }
+            }
+        },
+        "/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SingUp"
+                ],
+                "summary": "Register a new user",
+                "operationId": "registerUser",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "User registered successfully"
+                    },
+                    "400": {
+                        "description": "Invalid request format"
                     }
                 }
             }
@@ -199,6 +284,24 @@
                     }
                 }
             }
+        },
+        "main.User": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
